--- a/03. Intro to React and JSX/index.html
+++ b/03. Intro to React and JSX/index.html
@@ -7,6 +7,6 @@
     <title>React and JSX playground</title>
 </head>
 <body>
-    <h1>Hello React!</h1>
+    <h1>Hello React World!</h1>
 </body>
 </html>
